force-app/main/default/objects/Technical_Attribute_Discrepancy__c/Technical_Attribute_Discrepancy__c.object-meta.xml
<CustomObject>
    <description>This Object stories the discrepancies in Technical Attribute picklist values that are getting synced from Proactive</description>
    <label>Technical Attribute Discrepancy</label>
    <nameField>
        <displayFormat>TAD - {0000}</displayFormat>
        <label>Technical Attribute Discrepancy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Attribute Discrepancies</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>