force-app/main/default/objects/Technical_Attribute_Discrepancy__c/fields/Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Name__c</fullName>
    <description>This field stores the picklist attribute for which there is a discrepancy</description>
    <label>Attribute Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>