force-app/main/default/objects/Technical_Attribute_Discrepancy__c/fields/Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the Installed Product for which discrepancy was caught</description>
    <label>Installed Product</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Technical Attribute Discrepancies</relationshipLabel>
    <relationshipName>Technical_Attribute_Discrepancies</relationshipName>
    <type>Lookup</type>
</CustomField>