force-app/main/default/objects/Technical_Attribute_Discrepancy__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>This field stores the Product family</description>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>