force-app/main/default/objects/Technical_Attribute_Discrepancy__c/fields/Value_from_Proactive__c.field-meta.xml
<CustomField>
    <fullName>Value_from_Proactive__c</fullName>
    <description>This field stores the picklist value discrepancy</description>
    <label>Value from Proactive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>